--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["orhanbalci <orhanbalci@gmail.com>"]
 [dependencies]
 reqwest = "*"
 serde = "1.0"
-serde_json = "1.0"
+# serde_json = "1.0"
 serde_derive = "1.0"
+url = "1.4.0"
 
