--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,10 @@ addons:
     - libelf-dev
     - libdw-dev
     - binutils-dev
+    - cmake
+    sources:
+    - kalakris-cmake
+
 rust:
 - stable 
 - beta
@@ -14,16 +18,19 @@ rust:
 before_script:
 - |
   pip install 'travis-cargo<0.2' --user &&
-  export PATH=$HOME/.local/bin:$PATH
+  export PATH=$HOME/.local/bin:$PATHi &&
+  cargo install cargo-travis &&
+  export PATH=$HOME/.cargo/bin:$PATH
+
 script:
 - |
-  travis-cargo build &&
-  travis-cargo test &&
-  travis-cargo bench &&
-  travis-cargo --only stable doc
+  cargo build &&
+  cargo test &&
+  cargo bench &&
+  cargo --only stable doc
 after_success:
 - travis-cargo --only stable doc-upload
-- travis-cargo coveralls --no-sudo --verify
+- cargo coveralls
 env:
   global:
   - TRAVIS_CARGO_NIGHTLY_FEATURE=""
