--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ rust:
 before_script:
 - |
   pip install 'travis-cargo<0.2' --user &&
-  export PATH=$HOME/.local/bin:$PATHi &&
+  export PATH=$HOME/.local/bin:$PATH &&
   cargo install cargo-travis &&
   export PATH=$HOME/.cargo/bin:$PATH
 
