homepage url fixed

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Orhan Balci <orhanbalci@gmail.com>"]
 description = "SyntaxDb rest API client"
 documentation = "http://orhanbalci.github.io/rust-syntaxdb"
-homepage= "https:/github.com/orhanbalci"
+homepage= "https://github.com/orhanbalci"
 repository = "https://github.com/orhanbalci/rust-syntaxdb.git"
 keywords = ["syntaxdb", "rest"]
 license  = "MIT"
